# cienscope_autotests

./: .env  .gitignore  conftest.py  constants.py  pyproject.toml
api/: api_manager.py  auth_api.py  movies_api.py  user_api.py
constants/: constants.py
custom_requester/: custom_requester.py
db_requester/: models.py
entities/: user.py
models/: base_models.py  register_user_model.py  user_model.py
resources/: user_creds.py
tests/: test_auth_api.py  test_movie_api.py  test_user_api.py
utils/: data_generator.py
