[tool.poetry]
name = "cienscope-autotests"
version = "0.1.0"
description = ""
authors = ["yurapwnz <yurapwnz1992@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
requests = "^2.32.3"
faker = "^37.0.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
