[tool.poetry]
name = "cienscope-autotests"
version = "0.1.0"
description = ""
authors = ["yurapwnz <yurapwnz1992@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
requests = "^2.32.3"
faker = "^37.0.0"
dotenv = "^0.9.9"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.39"
psycopg2 = "^2.9.10"
pytz = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
